--- a/sections/collection-list.liquid
+++ b/sections/collection-list.liquid
@@ -149,6 +149,13 @@
       "default": "t:sections.collection-list.settings.title.default",
       "label": "t:sections.collection-list.settings.title.label"
     },
+
+    {
+      "type": "checkbox",
+      "id": "variant",
+      "label": "Variant",
+      "default": false
+    },
     {
       "type": "select",
       "id": "heading_size",
