--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -19,7 +19,7 @@
 {% endfor %}
 <product-info
   id="MainProduct-{{ section.id }}"
-  class="section-{{ section.id }}-padding gradient color-{{ section.settings.color_scheme }}"
+  class="section-{{ section.id }}-padding gradient color-{{ section.settings.color_scheme }}  {% if settings.sp-quick-view-varient == 'box' %} sp-card-varient {% else %} '' {% endif %}"
   data-section="{{ section.id }}"
   data-product-id="{{ product.id }}"
   data-update-url="true"
@@ -95,12 +95,12 @@
   <div class="page-width">
     <div class="product product--{{ section.settings.media_size }} product--{{ section.settings.media_position }} product--{{ section.settings.gallery_layout }} product--mobile-{{ section.settings.mobile_thumbnails }} grid grid--1-col {% if product.media.size > 0 %}grid--2-col-tablet{% else %}product--no-media{% endif %}">
       <div class="grid__item product__media-wrapper hello ">
-        {% render 'product-media-gallery', 
+        {% render 'product-media-gallery',
           product: product,
           variant_images: variant_images,
           initial_limit: section.settings.initial_media_count,
           load_more_count: section.settings.load_more_count,
-          sp-load-more: section.settings.sp-media-gallery-container,
+          sp-load-more: section.settings['sp-media-gallery-container']
         %}
       </div>
       <custom-modal id="modal-1">
@@ -144,7 +144,7 @@
         <div slot="footer">Write Review</div>
       </custom-modal>
 
-      <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
+      <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}  {% if settings.sp-quick-view-varient == 'box' %} sp-card-wrapper {% else %} '' {% endif %} ">
         <section
           id="ProductInfo-{{ section.id }}"
           class="product__info-container{% if section.settings.enable_sticky_info %} product__column-sticky{% endif %}"
@@ -374,9 +374,12 @@
                     </span>
                   </label>
                   <div class="price-per-item__container">
-                    {%  if block.settings.quantity_event=="default" %}
-
-                      <quantity-input class="quantity sp-qty-default" data-url="{{ product.url }}" data-section="{{ section.id }}">
+                    {% if block.settings.quantity_event == 'default' %}
+                      <quantity-input
+                        class="quantity sp-qty-default"
+                        data-url="{{ product.url }}"
+                        data-section="{{ section.id }}"
+                      >
                         <button class="quantity__button" name="minus" type="button">
                           <span class="visually-hidden">
                             {{- 'products.product.quantity.decrease' | t: product: product.title | escape -}}
@@ -411,9 +414,12 @@
                         </button>
                       </quantity-input>
 
-                    {% elsif block.settings.quantity_event=="hover"  %}
-
-                      <quantity-input class="quantity sp-qty-hover" data-url="{{ product.url }}" data-section="{{ section.id }}">
+                    {% elsif block.settings.quantity_event == 'hover' %}
+                      <quantity-input
+                        class="quantity sp-qty-hover"
+                        data-url="{{ product.url }}"
+                        data-section="{{ section.id }}"
+                      >
                         <button class="quantity__button" name="minus" type="button">
                           <span class="visually-hidden">
                             {{- 'products.product.quantity.decrease' | t: product: product.title | escape -}}
@@ -448,47 +454,56 @@
                         </button>
                       </quantity-input>
 
-                    {% elsif block.settings.quantity_event=="click"  %}
-                  <div class="sp-quantity-click">
-                      <button class="quantity__button" name="minus" type="button">
-                        <span class="visually-hidden">
-                          {{- 'products.product.quantity.decrease' | t: product: product.title | escape -}}
-                        </span>
-                        <span class="svg-wrapper">
-                          {{- 'icon-minus.svg' | inline_asset_content -}}
-                        </span>
-                      </button>
-                      <select-component>
-                        <div class="custom-dropdown">
-                            <button class="dropdown-btn">{{product.selected_or_first_available_variant.quantity_rule.min }}</button>
+                    {% elsif block.settings.quantity_event == 'click' %}
+                      <div class="sp-quantity-click">
+                        <button class="quantity__button" name="minus" type="button">
+                          <span class="visually-hidden">
+                            {{- 'products.product.quantity.decrease' | t: product: product.title | escape -}}
+                          </span>
+                          <span class="svg-wrapper">
+                            {{- 'icon-minus.svg' | inline_asset_content -}}
+                          </span>
+                        </button>
+                        <select-component>
+                          <div class="custom-dropdown">
+                            <button class="dropdown-btn">
+                              {{ product.selected_or_first_available_variant.quantity_rule.min }}
+                            </button>
                             <ul class="dropdown-menu">
-                                {%- for i in (block.settings.quantity_min..block.settings.quantity_max) -%}
-                                    <li
-                                            class="dropdown-item   {% if i == block.settings.quantity_min %}
-                                                selected
-                                            {% endif %}"
-                                            data-value="{{ i }}"
-                                            value="{{ i }}"
-                                          
-                                    >
-                                        {{ i }}
-                                    </li>
-                                {%- endfor -%}
+                              {%- for i in (block.settings.quantity_min..block.settings.quantity_max) -%}
+                                <li
+                                  class="
+                                    dropdown-item   {% if i == block.settings.quantity_min %}
+                                        selected
+                                    {% endif %}
+                                  "
+                                  data-value="{{ i }}"
+                                  value="{{ i }}"
+                                >
+                                  {{ i }}
+                                </li>
+                              {%- endfor -%}
                             </ul>
-                        </div>
-                        <input type="hidden" id="dropdownValue" name="quantity" form="{{ product_form_id }}" value="{{ block.settings.quantity_min }}">
-                      </select-component>
-                      <button class="quantity__button" name="plus" type="button">
-                      <span class="visually-hidden">
-                        {{- 'products.product.quantity.increase' | t: product: product.title | escape -}}
-                      </span>
-                      <span class="svg-wrapper">
-                        {{- 'icon-plus.svg' | inline_asset_content -}}
-                      </span>
-                      </button>
-                  </div>
+                          </div>
+                          <input
+                            type="hidden"
+                            id="dropdownValue"
+                            name="quantity"
+                            form="{{ product_form_id }}"
+                            value="{{ block.settings.quantity_min }}"
+                          >
+                        </select-component>
+                        <button class="quantity__button" name="plus" type="button">
+                          <span class="visually-hidden">
+                            {{- 'products.product.quantity.increase' | t: product: product.title | escape -}}
+                          </span>
+                          <span class="svg-wrapper">
+                            {{- 'icon-plus.svg' | inline_asset_content -}}
+                          </span>
+                        </button>
+                      </div>
                     {% endif %}
-                 
+
                     {%- liquid
                       assign volume_pricing_array = product.selected_or_first_available_variant.quantity_price_breaks | sort: 'quantity' | reverse
                       assign current_qty_for_volume_pricing = cart_qty | plus: product.selected_or_first_available_variant.quantity_rule.min
@@ -981,7 +996,6 @@
   <script src="{{ 'media-gallery.js' | asset_url }}" defer></script>
 {%- endif -%}
 
-
 {% schema %}
 {
   "name": "t:sections.main-product.name",
@@ -992,7 +1006,7 @@
       "type": "@app"
     },
 
-     {
+    {
       "type": "text_with_link",
       "name": "text_with_link",
       "limit": 1,
@@ -1006,107 +1020,99 @@
       ]
     },
 
-        {
+    {
       "type": "star",
       "name": "star Ratings",
       "limit": 1,
       "settings": [
-       {
-      "type": "range",
-       "id": "reviews",
-       "min": 0,
-      "max": 5,
-       "step": 0.1,
-      "label": "Review",
-     "default": 3
-       },
+        {
+          "type": "range",
+          "id": "reviews",
+          "min": 0,
+          "max": 5,
+          "step": 0.1,
+          "label": "Review",
+          "default": 3
+        },
         {
           "type": "text",
           "id": "text",
           "default": "<p>t:sections.image-banner.blocks.text.settings.text.default</p>",
           "label": "Give Star Rating"
-            },
-
-
+        }
       ]
     },
 
-
-
-
-     {
+    {
       "type": "description",
       "name": "t:sections.main-product.blocks.description.name",
       "limit": 1,
       "settings": [
-
-      {
-        "type": "image_picker",
-        "id": "modal_logo",
-        "label":"Modal logo Image",
-      }
+        {
+          "type": "image_picker",
+          "id": "modal_logo",
+          "label": "Modal logo Image"
+        }
       ]
     },
 
-{
- "type":"social_icons",
- "name":"Social Share",
- "limit":1,
- "settings":[
- {
- "type":"checkbox",
- "id":"is_facebook",
- "label":" Facebook"
- },
- {
- "type":"checkbox",
- "id":"is_twitter",
- "label":" Twitter"
- },
- {
- "type":"checkbox",
- "id":"is_pinterest",
- "label":" Pinterest"
- },
- {
- "type":"checkbox",
- "id":"is_tumblr",
- "label":" Tumblr"
- },
- {
- "type":"checkbox",
- "id":"is_reddit",
- "label":" Reddit"
- },
- {
- "type":"checkbox",
- "id":"is_vk",
- "label":" Vk"
- },{
- "type":"checkbox",
- "id":"is_whatsapp",
- "label":" Whatsapp"
- },{
- "type":"checkbox",
- "id":"is_telegram",
- "label":" Telegram"
- },{
- "type":"checkbox",
- "id":"is_linkedin",
- "label":" linkedin"
- },
- {
- "type":"checkbox",
- "id":"is_instagram",
- "label":" Instagram"
- }
- ]
-},
-
-
-
-
-
+    {
+      "type": "social_icons",
+      "name": "Social Share",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "checkbox",
+          "id": "is_facebook",
+          "label": " Facebook"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_twitter",
+          "label": " Twitter"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_pinterest",
+          "label": " Pinterest"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_tumblr",
+          "label": " Tumblr"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_reddit",
+          "label": " Reddit"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_vk",
+          "label": " Vk"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_whatsapp",
+          "label": " Whatsapp"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_telegram",
+          "label": " Telegram"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_linkedin",
+          "label": " linkedin"
+        },
+        {
+          "type": "checkbox",
+          "id": "is_instagram",
+          "label": " Instagram"
+        }
+      ]
+    },
 
     {
       "type": "text",
@@ -1155,7 +1161,6 @@
       "name": "t:sections.main-product.blocks.sku.name",
       "limit": 1,
       "settings": [
-        
         {
           "type": "select",
           "id": "text_style",
@@ -1178,8 +1183,6 @@
         }
       ]
     },
-
-    
 
     {
       "type": "inventory",
@@ -1250,22 +1253,22 @@
           "label": "Quantity Event"
         },
         {
-          "type":"range",
-          "id":"quantity_min",
-          "min":1,
-          "max":100,
-          "step":1,
-          "default":1,
-          "label":"Minimum quantity",
+          "type": "range",
+          "id": "quantity_min",
+          "min": 1,
+          "max": 100,
+          "step": 1,
+          "default": 1,
+          "label": "Minimum quantity"
         },
         {
-          "type":"range",
-          "id":"quantity_max",
-          "min":1,
-          "max":100,
-          "step":1,
-          "default":10,
-          "label":"Maximum quantity",
+          "type": "range",
+          "id": "quantity_max",
+          "min": 1,
+          "max": 100,
+          "step": 1,
+          "default": 10,
+          "label": "Maximum quantity"
         }
       ]
     },
@@ -2498,10 +2501,10 @@
       "label": "t:sections.main-product.settings.enable_sticky_info.label"
     },
     {
-      "type":"checkbox",
-      "id":"enable_single_image_zoom",
-      "label":"Show only one image at a time in zoom modal",
-      "default":false
+      "type": "checkbox",
+      "id": "enable_single_image_zoom",
+      "label": "Show only one image at a time in zoom modal",
+      "default": false
     },
 
     {
@@ -2700,7 +2703,6 @@
       "label": "t:sections.all.padding.padding_bottom",
       "default": 36
     }
-
   ]
 }
 {% endschema %}
